<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_iv"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/movie_picture_content_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_label"
            android:paddingTop="5dp"
            android:layout_below="@id/image_iv"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/title"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:id="@+id/title_tv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/released_date_label"
            android:layout_below="@id/title_tv"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/releaseddate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/released_date_label"
            android:id="@+id/released_date_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_rating_label"
            android:layout_below="@id/released_date_tv"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/userrating"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/user_rating_label"
            android:id="@+id/user_rating_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/overview_label"
            android:layout_below="@id/user_rating_tv"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/overview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/overview_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:id="@+id/overview_tv"/>


    </RelativeLayout>

</ScrollView>